--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,21 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
-*.local
+package-lock.json
+yarn.lock
 
-# Editor directories and files
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor/OS
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,3 +31,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+Thumbs.db
+
